fix(rgaa): color contrast

--- a/packages/app/src/components/InputYear/style.scss
+++ b/packages/app/src/components/InputYear/style.scss
@@ -13,6 +13,6 @@
     border: solid 1px #0072ca !important;
   }
   .has-error & {
-    border: solid 1px #ff6966 !important;
+    border: solid 1px #df1400 !important;
   }
 }
